# aeca-python

./: README.md  proto.sh  pyproject.toml  requirements.txt  setup.py
src/aeca/: __init__.py  channel.py  document_db.py  fts_analysis_pipeline.py  key_value_db.py  sentence_transformer.py  system_metrics.py
src/aeca/protobuf/: __init__.py  document.proto  document_db.proto  document_db_pb2.py  document_db_pb2_grpc.py  document_pb2.py  fts_analysis_pipeline.proto  fts_analysis_pipeline_pb2.py  fts_analysis_pipeline_pb2_grpc.py  key_value_db.proto  key_value_db_pb2.py  key_value_db_pb2_grpc.py  sentence_transformer.proto  sentence_transformer_pb2.py  sentence_transformer_pb2_grpc.py  system_metrics.proto  system_metrics_pb2.py  system_metrics_pb2_grpc.py  workspaces.proto  workspaces_pb2.py  workspaces_pb2_grpc.py
src/cognica/: __init__.py  channel.py  document_db.py  fts_analysis_pipeline.py  key_value_db.py  sentence_transformer.py
src/cognica/protobuf/: __init__.py  document.proto  document_db.proto  document_db_pb2.py  document_db_pb2_grpc.py  document_pb2.py  fts_analysis_pipeline.proto  fts_analysis_pipeline_pb2.py  fts_analysis_pipeline_pb2_grpc.py  key_value_db.proto  key_value_db_pb2.py  key_value_db_pb2_grpc.py  sentence_transformer.proto  sentence_transformer_pb2.py  sentence_transformer_pb2_grpc.py
